design changes. builder methods seperated in differnt classes