@@ -1,13 +1,11 @@
 package io.github.deepeshpatel.jnumbertools.generator.combination;
 
-import io.github.deepeshpatel.jnumbertools.generator.JNumberTools;
+import io.github.deepeshpatel.jnumbertools.entrypoint.JNumberTools;
 import org.junit.Assert;
 import org.junit.Test;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static io.github.deepeshpatel.jnumbertools.numbersystem.MathUtil.nCr;
 import static org.junit.Assert.assertEquals;
@@ -20,7 +18,7 @@ public class UniqueCombinationTest {
         for(int n=0; n<=4; n++) {
             List<String> input = Collections.nCopies(n, "A");
             for(int r=0; r<=n; r++) {
-                int count = (int) JNumberTools.combinationsOf(input,r)
+                int count = (int) JNumberTools.combinations().of(input,r)
                         .unique().stream().count();
                 Assert.assertEquals(nCr(n,r), count);
             }
@@ -29,10 +27,10 @@ public class UniqueCombinationTest {
 
     @Test
     public void shouldReturnSameResultForDifferentIteratorObjects(){
-        List<String> input = Arrays.asList("A", "B", "C");
-        UniqueCombination<String> iterable = JNumberTools.combinationsOf(input,2).unique();
-        List<List<String>> lists1 = iterable.stream().collect(Collectors.toList());
-        List<List<String>> lists2 = iterable.stream().collect(Collectors.toList());
+        var input = List.of("A", "B", "C");
+        var iterable = JNumberTools.combinations().of(input,2).unique();
+        var lists1 = iterable.stream().toList();
+        var lists2 = iterable.stream().toList();
 
         Assert.assertEquals(lists1, lists2);
     }
@@ -41,13 +39,13 @@ public class UniqueCombinationTest {
     public void  shouldGenerateCombinationsInInputOrder() {
 
         String expected = "[[Red, Green], [Red, Blue], [Green, Blue]]";
-        List<String> input = Arrays.asList("Red", "Green", "Blue");
+        var input = List.of("Red", "Green", "Blue");
 
-        String output = JNumberTools
-                .combinationsOf(input,2)
+        String output = JNumberTools.combinations()
+                .of(input,2)
                 .unique()
                 .stream()
-                .collect(Collectors.toList()).toString();
+                .toList().toString();
 
         assertEquals(expected, output);
     }
@@ -55,11 +53,11 @@ public class UniqueCombinationTest {
     @Test
     public void shouldReturnEmptyListForSizeEqualsZero() {
 
-        String output = JNumberTools
-                .combinationsOf(Arrays.asList("A","B"),0)
+        String output = JNumberTools.combinations()
+                .of(List.of("A","B"),0)
                 .unique()
                 .stream()
-                .collect(Collectors.toList()).toString();
+                .toList().toString();
 
         assertEquals("[[]]", output);
     }
@@ -67,17 +65,17 @@ public class UniqueCombinationTest {
     @Test (expected = IllegalArgumentException.class)
     public void shouldThrowExceptionForSizeGreaterThanN() {
 
-        JNumberTools.combinationsOf(Arrays.asList("A","B"),3)
+        JNumberTools.combinations().of(List.of("A","B"),3)
                 .unique();
     }
 
     @Test
     public void  shouldGenerateEmptyListForNullInput() {
-        String output = JNumberTools
-                .combinationsOf(Collections.emptyList(),0)
+        String output = JNumberTools.combinations()
+                .of(Collections.emptyList(),0)
                 .unique()
                 .stream()
-                .collect(Collectors.toList()).toString();
+                .toList().toString();
 
         assertEquals("[[]]", output);
     }
