@@ -1,15 +1,13 @@
 package io.github.deepeshpatel.jnumbertools.generator.permutation;
 
 
-import io.github.deepeshpatel.jnumbertools.generator.JNumberTools;
+import io.github.deepeshpatel.jnumbertools.entrypoint.JNumberTools;
 import org.junit.Assert;
 import org.junit.Test;
 
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.List;
 import java.util.Random;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static io.github.deepeshpatel.jnumbertools.numbersystem.MathUtil.factorial;
@@ -20,9 +18,9 @@ public class MultisetPermutationTest {
     public void assertCount() {
         Random random = new Random(System.currentTimeMillis());
         for(int n=1; n<=6; n++){
-            List<String> input = Collections.nCopies(n, "A");
+            var input = Collections.nCopies(n, "A");
             int[] multisetFreqArray =getRandomMultisetFreqArray(random, input.size());
-            long count = JNumberTools.permutationsOf(input)
+            long count = JNumberTools.permutations().of(input)
                     .multiset(multisetFreqArray).stream().count();
 
             int sum = Arrays.stream(multisetFreqArray).reduce(0, Integer::sum);
@@ -36,11 +34,11 @@ public class MultisetPermutationTest {
 
     @Test
     public void shouldReturnSameResultForDifferentIteratorObjects(){
-        MultisetPermutation<String> iterable = JNumberTools.permutationsOf("A", "B", "C")
+        MultisetPermutation<String> iterable = JNumberTools.permutations().of("A", "B", "C")
                 .multiset(3, 2, 3);
 
-        List<List<String>> lists1 = iterable.stream().collect(Collectors.toList());
-        List<List<String>> lists2 = iterable.stream().collect(Collectors.toList());
+        var lists1 = iterable.stream().toList();
+        var lists2 = iterable.stream().toList();
         Assert.assertEquals(lists1, lists2);
     }
 
@@ -52,18 +50,6 @@ public class MultisetPermutationTest {
         }
         return multisetFreqArray;
     }
-
-//    private List<Long> factorialList(){
-//        int n = 20;
-//        long p=1;
-//        List<Long> factorials = new ArrayList<>(n+1);
-//        factorials.add(1L);
-//        for(long i=1; i<=n; i++){
-//            p *=i;
-//            factorials.add(p);
-//        }
-//        return factorials;
-//    }
 
     @Test
     public void shouldGenerateAllUniquePermutationsOfMultiset2(){
@@ -80,11 +66,10 @@ public class MultisetPermutationTest {
                 "[Blue, Red, Green, Red], " +
                 "[Blue, Green, Red, Red]]";
 
-
-        String output = JNumberTools.permutationsOf("Red", "Green", "Blue")
+        String output = JNumberTools.permutations().of("Red", "Green", "Blue")
                 .multiset(new int[]{2,1,1})
                 .stream()
-                .collect(Collectors.toList()).toString();
+                .toList().toString();
 
         Assert.assertEquals(expected,output);
     }
@@ -95,10 +80,10 @@ public class MultisetPermutationTest {
                 "[A, B, C, A], [A, C, A, B], [A, C, B, A], [B, A, A, C], " +
                 "[B, A, C, A], [B, C, A, A], [C, A, A, B], [C, A, B, A], [C, B, A, A]]";
 
-        String output = JNumberTools.permutationsOf("A", "B", "C")
+        String output = JNumberTools.permutations().of("A", "B", "C")
                 .multiset(new int[]{2,1,1})
                 .stream()
-                .collect(Collectors.toList()).toString();
+                .toList().toString();
 
         Assert.assertEquals(expected,output);
     }
