@@ -1,12 +1,11 @@
 package io.github.deepeshpatel.jnumbertools.generator.permutation;
 
-import io.github.deepeshpatel.jnumbertools.generator.JNumberTools;
+import io.github.deepeshpatel.jnumbertools.entrypoint.JNumberTools;
 import org.junit.Assert;
 import org.junit.Test;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.junit.Assert.assertEquals;
 
@@ -18,7 +17,7 @@ public class RepetitivePermutationNthTest {
         for(int n=1; n<=5; n++) {
             List<String> input = Collections.nCopies(n, "A");
             for(int size=0; size<=3; size++){
-                long count = JNumberTools.permutationsOf(input)
+                long count = JNumberTools.permutations().of(input)
                         .repetitiveNth(size,increment)
                         .stream().count();
                 double expected = Math.ceil(Math.pow(n,size)/increment);
@@ -29,20 +28,20 @@ public class RepetitivePermutationNthTest {
 
     @Test
     public void shouldReturnSameResultForDifferentIteratorObjects(){
-        RepetitivePermutationNth<String> iterable = JNumberTools
-                .permutationsOf("A", "B", "C")
+        RepetitivePermutationNth<String> iterable = JNumberTools.permutations()
+                .of("A", "B", "C")
                 .repetitiveNth(2, 2);
-        List<List<String>> lists1 = iterable.stream().collect(Collectors.toList());
-        List<List<String>> lists2 = iterable.stream().collect(Collectors.toList());
+        var lists1 = iterable.stream().toList();
+        var lists2 = iterable.stream().toList();
         Assert.assertEquals(lists1, lists2);
     }
 
     @Test
     public void shouldGenerateAllPermutationsOf2Values() {
         String expected = "[[0, 0, 0], [0, 1, 0], [1, 0, 0], [1, 1, 0]]";
-        String actual   = JNumberTools.permutationsOf("0","1")
+        String actual   = JNumberTools.permutations().of("0","1")
                 .repetitiveNth(3,2)
-                .stream().collect(Collectors.toList()).toString();
+                .stream().toList().toString();
 
         assertEquals(expected,actual);
     }
@@ -51,10 +50,10 @@ public class RepetitivePermutationNthTest {
     public void shouldGenerateRepetitiveNthPermutations() {
         String expected = "[[A, A], [A, C], [B, B], [C, A], [C, C]]";
 
-        List<List<String>> output = JNumberTools.permutationsOf("A", "B", "C")
+        var output = JNumberTools.permutations().of("A", "B", "C")
                 .repetitiveNth(2,2)
                 .stream()
-                .collect(Collectors.toList());
+                .toList();
 
         Assert.assertEquals(expected, output.toString());
     }
