@@ -1,11 +1,12 @@
 package io.github.deepeshpatel.jnumbertools.generator.subset;
 
-import io.github.deepeshpatel.jnumbertools.generator.JNumberTools;
+import io.github.deepeshpatel.jnumbertools.entrypoint.JNumberTools;
 import org.junit.Assert;
 import org.junit.Test;
 
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.List;
 
 import static io.github.deepeshpatel.jnumbertools.numbersystem.MathUtil.nCr;
 import static org.junit.Assert.assertEquals;
@@ -16,7 +17,7 @@ public class SubsetGeneratorTest {
     public void assertCountOfAllSubsets() {
         for(int n=0; n<=4; n++) {
             List<String> input = Collections.nCopies(n, "A");
-            int count = (int) JNumberTools.subsetsOf(input)
+            int count = (int) JNumberTools.subsets().of(input)
                     .all()
                     .stream().count();
 
@@ -31,7 +32,7 @@ public class SubsetGeneratorTest {
             List<String> input = Collections.nCopies(n, "A");
             int from=0;
             for(int range=0; range<=n; range++) {
-                int count = (int) JNumberTools.subsetsOf(input)
+                int count = (int) JNumberTools.subsets().of(input)
                         .inRange(from, range)
                         .stream().count();
                 assertSize(count,n,from,range);
@@ -49,7 +50,7 @@ public class SubsetGeneratorTest {
 
     @Test(expected = NullPointerException.class)
     public void shouldNotAllowSubsetOfNullCollection() {
-        JNumberTools.subsetsOf((Collection<String>)null).all();
+        JNumberTools.subsets().of((Collection<String>)null).all();
     }
 
     @Test
@@ -57,10 +58,10 @@ public class SubsetGeneratorTest {
 
         String expected = "[[C], [B], [A], [C, B], [C, A], [B, A], [C, B, A]]";
 
-        String output = JNumberTools
-                .subsetsOf("C", "B", "A")
+        String output = JNumberTools.subsets()
+                .of("C", "B", "A")
                 .inRange(1, 3)
-                .stream().collect(Collectors.toList()).toString();
+                .stream().toList().toString();
 
         assertEquals(expected, output);
     }
@@ -70,10 +71,10 @@ public class SubsetGeneratorTest {
 
         String expected = "[[A, B], [A, C], [B, C], [A, B, C]]";
 
-        String output = JNumberTools
-                .subsetsOf("A", "B", "C")
+        String output = JNumberTools.subsets()
+                .of("A", "B", "C")
                 .inRange(2, 3)
-                .stream().collect(Collectors.toList()).toString();
+                .stream().toList().toString();
 
         assertEquals(expected, output);
     }
@@ -81,28 +82,28 @@ public class SubsetGeneratorTest {
     @Test
     public void shouldGenerateAllPossibleSubsetsWithAllMethod() {
         String expected = "[[], [A], [B], [C], [A, B], [A, C], [B, C], [A, B, C]]";
-        String output = JNumberTools.subsetsOf("A", "B", "C")
-                .all().stream().collect(Collectors.toList()).toString();
+        String output = JNumberTools.subsets().of("A", "B", "C")
+                .all().stream().toList().toString();
 
         assertEquals(expected, output);
     }
 
     @Test
     public void shouldGenerateEmptyForRangeFromZeroToZero() {
-        String output = JNumberTools
-                .subsetsOf("A", "B", "C")
+        String output = JNumberTools.subsets()
+                .of("A", "B", "C")
                 .inRange(0, 0)
-                .stream().collect(Collectors.toList()).toString();
+                .stream().toList().toString();
 
         assertEquals("[[]]", output);
     }
 
     @Test
     public void shouldGenerateSubsetFromGivenInputSize() {
-        String output = JNumberTools
-                .subsetsOf(3)
+        String output = JNumberTools.subsets()
+                .of(3)
                 .all()
-                .stream().collect(Collectors.toList()).toString();
+                .stream().toList().toString();
 
         assertEquals("[[], [0], [1], [2], [0, 1], [0, 2], [1, 2], [0, 1, 2]]", output);
     }
